Update some documentation and version numbers.
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@267 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Getting Started.html
+++ b/osx/Getting Started.html
@@ -2,9 +2,9 @@
 <html>
 
 	<head>
-		<meta name="Title" content="Getting Started with the SLIMP3 Server, Version 4.2.2">
+		<meta name="Title" content="Getting Started with the Slim Server, Version 5.0.0">
 		<title>
-			Getting Started with the SLIMP3 Server, Version 4.2.2
+			Getting Started with the Slim Server, Version 5.0.0
 		</title>
 	<style type="text/css"> <!--
 .exbodytext, p, ol, ul, dl, dd, td               { color: #333; font-size: 11px; font-family: Verdana, Arial, Helvetica, sans-serif }
