--- a/win32/Getting Started.html
+++ b/win32/Getting Started.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Getting Started with the SLIMP3 Server, Version 4.2.2</title>
+<title>Getting Started with the Slim Server, Version 5.0.0</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 	<style type="text/css"> <!--
 .exbodytext, p, ol, ul, dl, dd, td               { color: #333; font-size: 11px; font-family: Verdana, Arial, Helvetica, sans-serif }
