Clarification in the readme file.
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@674 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/Getting Started.html
+++ b/win32/Getting Started.html
@@ -24,7 +24,6 @@ ol, ul, li  {  list-style-position: outside }
 			<li><a href="#moodlogic">MoodLogic Support</a></li>
 			<li><a href="#service">Slim Windows Service</a></li>
 			<li><a href="#AAC">AAC Playback </a></li>
-			<li><a href="#Some">Some of the songs in iTunes library don't show up can't be opened</a></li>
 		</ul>
 		<p>If you have any questions or problems, please check the documentation built into the SlimServer web interface, or view the <a href="http://www.slimdevices.com/su_faq.html">FAQ</a>, visit our user forum at <a href="http://lists.slimdevices.com/lists/listinfo/discuss">http://lists.slimdevices.com/lists/listinfo/discuss</a> or contact our tech support team at <a href="mailto:support@slimdevices.com">support@slimdevices.com</a>.</p>
 		<p>Thanks,</p>
@@ -58,12 +57,12 @@ ol, ul, li  {  list-style-position: outside }
 			<li>To change the content playing, use the SlimServer web interface on the remote machine.</li>
 		</ul>
 		<hr/>
-		<p><i><a name="aac"></a></i><b>AAC Playback</b></p>
-		<p>This version of the SlimServer for Mac or Windows can convert iTunes AAC files to MP3 for playback on Squeezebox or SLIMP3 on-the-fly. To enable this feature, you'll need to install the free (and high quality) LAME MP3 encoder. For more information about LAME in general, <a href="http://lame.sourceforge.net/">click here</a> . LAME is free, but in some countries you may need to pay a license fee in order to legally encode MP3 files. There are several ways to install LAME, including the excellent <a href="http://www.blacktree.com/apps/index.html?iTunes-LAME/index.html">iTunes-LAME Encoder</a> (for Macintosh) or from <a href="http://rarewares.hydrogenaudio.org/mp3.html">Rarewares</a> (for Windows).</p>
+		<p><i><a name="AAC"></a></i><b>AAC Playback</b></p>
+		<p>This version of the SlimServer for Mac or Windows can play back iTunes AAC files on Squeezebox or SLIMP3.  Squeezebox owners don't need to install any additional software.  To enable this feature on SLIMP3, you'll need to install the free (and high quality) LAME MP3 encoder. For more information about LAME in general, <a href="http://lame.sourceforge.net/">click here</a> . LAME is free, but in some countries you may need to pay a license fee in order to legally encode MP3 files. There are several ways to install LAME, including the excellent <a href="http://www.blacktree.com/apps/index.html?iTunes-LAME/index.html">iTunes-LAME Encoder</a> (for Macintosh) or from <a href="http://rarewares.hydrogenaudio.org/mp3.html">Rarewares</a> (for Windows).</p>
 		<p>Once you have LAME installed, you should be able to playback iTunes-ripped AAC files (.m4a) as well as the audio from any QuickTime movie (.mov). Music purchased from the Apple Music Store (.m4p files) is protected and cannot be played back with SlimServer until Apple provides the necessary hooks to enable this. In the mean time, it is possible to burn your Apple Music Store songs to CD and re-rip them.</p>
 		<p>Note that LAME-based encoding to MP3 for playback can use a substantial amount of CPU power. We continue to recommend high bit-rate MP3 encoded files for best performance, highest audio quality, and best compatibility.</p>
 		<hr/>
-		<p><b><a name="MoodLogic"></a>MoodLogic Support</b></p>
+		<p><b><a name="moodlogic"></a>MoodLogic Support</b></p>
 		<p>This version of the SlimServer software for Windows supports integration with the <a href="http://www.moodlogic.com/">MoodLogic</a> MP3 mix management software and associated metadata service. Install MoodLogic on your PC and identify your songs (regardless of tag information) and let MoodLogic automatically organize your collection by MoodLogic data (genre, mood, tempo, release year, etc). Once all your music is 'active' your Slim  can interact with your music in exciting new ways!</p>
 		<h4>Features:</h4>
 		<ul>
