Replacing slimsvc.exe and slim.exe with a single executable, slim.exe which can run as a windows service or "interactively"
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@844 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/Getting Started.html
+++ b/win32/Getting Started.html
@@ -104,10 +104,10 @@ ol, ul, li  {  list-style-position: outside }
 		<p>To install and run the SlimServer Windows service by hand, follow these instructions:</p>
 <ol>
   <li>Open a &quot;cmd&quot; window and type &quot;<code>cd C:\Program Files\SlimServer\server</code>&quot;.</li>
-  <li>Type &quot;<code>slimsvc -install auto</code>&quot; to install the SlimServer software so it will automatically start as a Windows Service the next time you reboot.</li>
+  <li>Type &quot;<code>slim.exe -install auto</code>&quot; to install the SlimServer software so it will automatically start as a Windows Service the next time you reboot.</li>
   <li>You can start or stop the service manually by using &quot;<code>net start 
     slimp3svc</code>&quot; or &quot;<code>net stop slimp3svc</code>&quot; respectively, or by using  the Control Panels-&gt;Administrative Tools-&gt;Services application.</li>
-  <li>You can uninstall the service by stopping it, then typing &quot;<code>slimsvc -remove</code>&quot;</li>
+  <li>You can uninstall the service by stopping it, then typing &quot;<code>slim.exe -remove</code>&quot;</li>
 </ol>
 <p>Windows 98/ME users can use the &quot;Scheduled Tasks&quot; icon to schedule the &quot;SlimServer&quot; application to start automatically when the computer starts. This will also work for Windows NT/2000/XP users who don't want to use Windows Services.</p>
 <hr>
