--- a/osx/Getting Started.html
+++ b/osx/Getting Started.html
@@ -19,7 +19,7 @@ ol, ul, li  {  list-style-position: outside }
 
 	<body bgcolor="white" lang="EN-US">
 		<h1 align="center">Getting Started with the SlimServer</h1>
-		<p align="center">Version 5.1</p>
+		<p align="center">Version 5.3.0b1</p>
 		<p>Thank you for downloading the latest version of the SlimServer for Mac OS X. Click on the following links to learn about each topic.</p>
 		<ul>
 			<li><a href="#Installation">Installation</a>
