--- a/osx/Getting Started.html
+++ b/osx/Getting Started.html
@@ -2,9 +2,9 @@
 <html>
 
 	<head>
-		<meta name="Title" content="Getting Started with the SlimServer, Version 6.0.0">
+		<meta name="Title" content="Getting Started with the SlimServer, Version 6.0a1">
 		<title>
-			Getting Started with the SlimServer, Version 6.0.0
+			Getting Started with the SlimServer, Version 6.0a1
 		</title>
 	<style type="text/css"> <!--
 .exbodytext, p, ol, ul, dl, dd, td               { color: #333; font-size: 11px; font-family: Verdana, Arial, Helvetica, sans-serif }
@@ -19,7 +19,7 @@ ol, ul, li  {  list-style-position: outside }
 
 	<body bgcolor="white" lang="EN-US">
 		<h1 align="center">Getting Started with the SlimServer</h1>
-		<p align="center">Version 6.0.0</p>
+		<p align="center">Version 6.0a1</p>
 		<p>Thank you for downloading the latest version of the SlimServer for Mac OS X. Click on the following links to learn about each topic.</p>
 		<ul>
 			<li><a href="#Installation">Installation</a>
@@ -69,6 +69,6 @@ ol, ul, li  {  list-style-position: outside }
 		<p>Visit the iTunes Preferences and click on Advanced. If the path to your Music Library folder is incorrect, you'll need to fix it. If it is correct, try changing it to a different folder and then change it back to the correct folder. iTunes will then update the paths to all your music and export that data correctly. (This process won't move any of your music, but it will force iTunes to scan your music library and update the paths to the songs.)</p>
 		<p>If this doesn't resolve your problem, iTunes might get confused if you changed the &quot;Keep Music Folder Organized&quot; or &quot;Add Track Number&quot; settings in iTunes. Try changing these settings and then changing them back to have iTunes update the correct information about your music files.  Note that having iTunes organizing your music files may involve moving or renaming the files themselves.</p>
 
-<hr><p align=center>Copyright 2003-2004, Slim Devices Inc.  All Rights Reserved.</p>
+<hr><p align=center>Copyright 2003-2005, Slim Devices Inc.  All Rights Reserved.</p>
 <hr>
 
