--- a/win32/Getting Started.html
+++ b/win32/Getting Started.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Getting Started with the SlimServer, Version 6.0.0</title>
+<title>Getting Started with the SlimServer, Version 6.0a1</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 	<style type="text/css"> <!--
 .exbodytext, p, ol, ul, dl, dd, td               { color: #333; font-size: 11px; font-family: Verdana, Arial, Helvetica, sans-serif }
@@ -16,7 +16,7 @@ ol, ul, li  {  list-style-position: outside }
 
 <body>
 		<h1 align="center">Getting Started with the SlimServer</h1>
-		<p align="center">Version 6.0.0</p>
+		<p align="center">Version 6.0a1</p>
 		<p>Thank you for downloading the latest version of the SlimServer for Windows. Click on the following links to learn about each topic.</p>
 		<ul>
 			<li><a href="#service">Installation</a></li>
@@ -111,6 +111,6 @@ ol, ul, li  {  list-style-position: outside }
 </ol>
 <p>Windows 98/ME users can use the &quot;Scheduled Tasks&quot; icon to schedule the &quot;SlimServer&quot; application to start automatically when the computer starts. This will also work for Windows NT/2000/XP users who don't want to use Windows Services.</p>
 <hr>
-<p align=center>Copyright 2003-2004, Slim Devices Inc.  All Rights Reserved.</p>
+<p align=center>Copyright 2003-2005, Slim Devices Inc.  All Rights Reserved.</p>
 </body>
 </html>
