Updating getting started documents.
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@3513 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Getting Started.html
+++ b/osx/Getting Started.html
@@ -2,9 +2,9 @@
 <html>
 
 	<head>
-		<meta name="Title" content="Getting Started with the SlimServer, Version 6.1.0">
+		<meta name="Title" content="Getting Started with SlimServer, Version 6.1.0">
 		<title>
-			Getting Started with the SlimServer, Version 6.1.0
+			Getting Started with the SlimServer, Version 6.1b1
 		</title>
 	<style type="text/css"> <!--
 .exbodytext, p, ol, ul, dl, dd, td               { color: #333; font-size: 11px; font-family: Verdana, Arial, Helvetica, sans-serif }
@@ -18,13 +18,12 @@ ol, ul, li  {  list-style-position: outside }
 </head>
 
 	<body bgcolor="white" lang="EN-US">
-		<h1 align="center">Getting Started with the SlimServer</h1>
-		<p align="center">Version 6.1.0</p>
+		<h1 align="center">Getting Started with SlimServer</h1>
+		<p align="center">Version 6.1b1</p>
 		<p>Thank you for downloading the latest version of the SlimServer for Mac OS X. Click on the following links to learn about each topic.</p>
 		<ul>
 			<li><a href="#Installation">Installation</a>
 			<li><a href="#Remote">Remote Playlist Management</a>
-			<li><a href="#AAC">AAC Playback </a>
 			<li><a href="#Plug-ins">Plug-ins and Skins: New location</a>
 			<li><a href="#Some">Some of the songs in iTunes library don't show up can't be opened</a>
 		</ul>
@@ -56,13 +55,8 @@ ol, ul, li  {  list-style-position: outside }
 
 
 		<hr>
-		<p><i><a name="AAC"></a></i><b>AAC Playback</b></p>
-		<p>This version of the SlimServer for Mac or Windows can play back iTunes AAC files on Squeezebox or SLIMP3.  Squeezebox owners don't need to install any additional software.  To enable this feature on SLIMP3, you'll need to install the free (and high quality) LAME MP3 encoder. For more information about LAME in general, <a href="http://lame.sourceforge.net/">click here</a> . LAME is free, but in some countries you may need to pay a license fee in order to legally encode MP3 files. There are several ways to install LAME, including the excellent <a href="http://www.blacktree.com/apps/index.html?iTunes-LAME/index.html">iTunes-LAME Encoder</a> (for Macintosh) or from <a href="http://rarewares.hydrogenaudio.org/mp3.html">Rarewares</a> (for Windows).</p>
-		<p>Once you have LAME installed, you should be able to playback iTunes-ripped AAC files (.m4a) as well as the audio from any QuickTime movie (.mov). Music purchased from the Apple Music Store (.m4p files) is protected and cannot be played back with SlimServer until Apple provides the necessary hooks to enable this. In the mean time, it is possible to burn your Apple Music Store songs to CD and re-rip them.</p>
-		<p>Note that LAME-based encoding to MP3 for playback can use a substantial amount of CPU power. We continue to recommend high bit-rate MP3 encoded files for best performance, highest audio quality, and best compatibility.</p>
-		<hr>
 		<p><a name="Plug-ins"></a><b>Plug-ins &amp; Skins: New location</b></p>
-		<p>If you installed Plug-ins or Skins for a previous version of SlimServer or SLIMP3 Server, you will need to re-install them after you upgrade to this version. With this version, you can install plug-ins and skins within the Library folder for the user running the SlimServer. The first time you run the SlimServer, two new folders will be created: <i>Home &gt; Library &gt; SlimDevices &gt; Plugins</i> or <i>Home &gt; Library &gt; SlimDevices &gt; html</i>, use these folders to install third-party plug-ins and skins respectively.</p>
+		<p>If you installed Plug-ins or Skins for a previous version of SlimServer, you will need to re-install them after you upgrade to this version. With this version, you can install plug-ins and skins within the Library folder for the user running the SlimServer. The first time you run the SlimServer, two new folders will be created: <i>Home &gt; Library &gt; SlimDevices &gt; Plugins</i> or <i>Home &gt; Library &gt; SlimDevices &gt; html</i>, use these folders to install third-party plug-ins and skins respectively.</p>
 		<hr>
 		<p><a name="Some"></a><b>Some of the songs in iTunes library don't show up in the SlimServer or can't be opened. </b></p>
 		<p>If you've moved your iTunes music files around, iTunes can export incorrect information about the songs in its library. You will need to make sure that iTunes has the correct folder for your music library.</p>
