--- a/osx/Getting Started.html
+++ b/osx/Getting Started.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<meta name="Title" content="Getting Started with SlimServer, Version 6.1.0">
+		<meta name="Title" content="Getting Started with SlimServer, Version 6.1b1">
 		<title>
 			Getting Started with the SlimServer, Version 6.1b1
 		</title>
