--- a/osx/Getting Started.html
+++ b/osx/Getting Started.html
@@ -2,9 +2,9 @@
 <html>
 
 	<head>
-		<meta name="Title" content="Getting Started with SlimServer, Version 6.1.0">
+		<meta name="Title" content="Getting Started with SlimServer, Version 6.2b1">
 		<title>
-			Getting Started with the SlimServer, Version 6.1.0
+			Getting Started with the SlimServer, Version 6.2b1
 		</title>
 	<style type="text/css"> <!--
 .exbodytext, p, ol, ul, dl, dd, td               { color: #333; font-size: 11px; font-family: Verdana, Arial, Helvetica, sans-serif }
@@ -19,7 +19,7 @@ ol, ul, li  {  list-style-position: outside }
 
 	<body bgcolor="white" lang="EN-US">
 		<h1 align="center">Getting Started with SlimServer</h1>
-		<p align="center">Version 6.1.0</p>
+		<p align="center">Version 6.2b1</p>
 		<p>Thank you for downloading the latest version of the SlimServer for Mac OS X. Click on the following links to learn about each topic.</p>
 		<ul>
 			<li><a href="#Installation">Installation</a>
