--- a/osx/Getting Started.html
+++ b/osx/Getting Started.html
@@ -40,9 +40,26 @@ ol, ul, li  {  list-style-position: outside }
 		</ul>
 		<p>If you use Apple's iTunes, the SlimServer will automatically import your iTunes library information. If you use iTunes to add or remove music from its library, the SlimServer will notice and rescan the song information.</p>
 		<p>If you don't want SlimServer to use the iTunes information you will need to specify a folder to use for your music library by launching the SlimServer web interface, clicking on the Server Settings and specify a folder for your music. If you add or move music in your library, you will need to manually initiate the rescanning by visiting the Server Settings page in the SlimServer web interface and click Rescan.</p>
+
+		<hr>
+		<p><b>Unicode Fonts</b></p>
+		Squeezebox players can now display unicode characters, including Japanese and other non-Latin languages.
+		To enable this display, you'll need to download a unicode TrueType font for SlimServer to use.  
+		SlimServer knows how to use the following fonts:
+		<ul>
+			<li>CODE2000.TTF is available for <a href="http://home.att.net/~jameskass/code2000_page.htm">download here</a>.
+			<li>Cyberbit.ttf is available for <a href="http://ftp.netscape.com/pub/communicator/extras/fonts/windows/">download here</a>.
+		</ul>
+		<p>Place a copy of any of these font files in your SlimServer graphics folder in <i>Home -> Library -> SlimDevices -> Graphics</i> and restart SlimServer to enable these fonts.
+
+		<hr>
 		<p><b>Firmware Update</b></p>
 		<p>If you own a Squeezebox Player, you may be prompted to update your firmware when it first connects to the SlimServer.  Press and hold the Brightness button on the remote control until the firmware update begins.</p>
-		<p>If you own a SLIMP3 Player, we recommend that you use the SLIMP3 Firmware Updater to update the firmware on your SLIMP3 player to the latest version, 2.3. This application is available on the installer disk in the Utilities folder. You can check the version number of firmware installed on your SLIMP3 by reading the number at the lower right-hand corner of the display when you plug in your SLIMP3 player.</p>
+		<p>If you own a SLIMP3 Player, we recommend that you use the SLIMP3 Firmware Updater to update the firmware on your SLIMP3 player to the latest version, 2.3. 
+			This application is available for <a href="http://www.slimdevices.com/downloads/firmware/1.3/SLIMP3 Firmware Updater.dmg">download</a>. 
+			You can check the version number of firmware installed on your SLIMP3 by reading the number at the lower right-hand corner of the display 
+			when you plug in your SLIMP3 player.
+		</p>
 		<hr>
 		<p><b><a name="Remote"></a>Remote Playlist Management </b></p>
 		<p>The SlimServer was designed to stream MP3 music to a Squeezebox or SLIMP3 Network Music Player. However, it can also stream the same music over the Internet to any software player that supports MP3 streaming.</p>
