--- a/win32/Getting Started.html
+++ b/win32/Getting Started.html
@@ -32,10 +32,28 @@ ol, ul, li  {  list-style-position: outside }
 		<p>If you use Apple's iTunes, the SlimServer will automatically import your iTunes library information. If you use iTunes to add or remove music from its library, the SlimServer will notice and rescan the song information.</p>
 		<p>You can also use the task tray icon to stop or start the SlimServer background service.
 
+		<hr>
+		<p><b>Unicode Fonts</b></p>
+		Squeezebox players can now display unicode characters, including Japanese and other non-Latin languages.
+		To enable this display, you'll need to download a unicode TrueType font for SlimServer to use.  
+		SlimServer knows how to use the following fonts:
+		<ul>
+			<li>CODE2000.TTF is available for <a href="http://home.att.net/~jameskass/code2000_page.htm">download here</a>.
+			<li>Cyberbit.ttf is available for <a href="http://ftp.netscape.com/pub/communicator/extras/fonts/windows/">download here</a>.
+			<li>arialuni.ttf is included is included in the recent versions of Microsoft Office products.
+		</ul>
+		<p>Place a copy of any of these font files in your SlimServer Graphics folder in 
+			<a href="file:///C:/Program%20Files/SlimServer/server/Graphics/">C:\Program Files\SlimServer\server\Graphics</a> then restart SlimServer.
+
+		<hr>
 		<p><b>Firmware Update</b></p>
-		<p>If you own a Squeezebox Player, you may be prompted to update your firmware when it first connects to the SlimServer. Press and hold the Brightness button on the remote control until the firmware update begins.</p>
-		<p>If you own a SLIMP3 player, this release includes an updater application for the SLIMP3 Player firmware. Open &quot;Firmware Updater&quot; and follow the displayed instructions to update the the firmware on your player to version 2.3. You can check the version number of firmware installed on your SLIMP3 by reading the number at the lower right-hand corner of the display when you plug in your SLIMP3 player.</p>
-		<hr />
+		<p>If you own a Squeezebox, you may be prompted to update your firmware when it first connects to the SlimServer.  Press and hold the Brightness button on the remote control until the firmware update begins.</p>
+		<p>If you own a SLIMP3 Player, we recommend that you use the SLIMP3 Firmware Updater to update the firmware on your SLIMP3 player to the latest version, 2.3. 
+			This application is available for <a href="http://www.slimdevices.com/downloads/firmware/2.3/SLIMP3%20Firmware%20Updater.zip">download</a>. 
+			You can check the version number of firmware installed on your SLIMP3 by reading the number at the lower right-hand corner of the display 
+			when you plug in your SLIMP3 player.
+		</p>
+		<hr>
 		<p><b><a name="Remote"></a>Remote Playlist Management </b></p>
 		<p>The SlimServer was designed to stream MP3 music to a Squeezebox or SLIMP3 Network Music Player. However, it can also stream the same music over yoru network to any software player that supports MP3 streaming.</p>
 		<p>First, install the SlimServer software and make sure the computer to be used as a SlimServer can be reached over the Internet. If not, you will need to forward port 9000 on your router to the SlimServer computer. (Consult your router documentation for instructions). Then:</p>
