--- a/win32/Getting Started.html
+++ b/win32/Getting Started.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Getting Started with SlimServer, Version 6.5b1</title>
+<title>Getting Started with SlimServer, Version 7.0a1</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 	<style type="text/css"> <!--
 .exbodytext, p, ol, ul, dl, dd, td               { color: #333; font-size: 11px; font-family: Verdana, Arial, Helvetica, sans-serif }
@@ -16,7 +16,7 @@ ol, ul, li  {  list-style-position: outside }
 
 <body>
 		<h1 align="center">Getting Started with SlimServer</h1>
-		<p align="center">Version 6.5b1</p>
+		<p align="center">Version 7.0a1</p>
 		<p>Thank you for downloading the latest version of the SlimServer for Windows. Click on the following links to learn about each topic.</p>
 		<ul>
 			<li><a href="#service">Installation</a></li>
