Update branding and copyright information to Logitech
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@11682 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/Getting Started.html
+++ b/win32/Getting Started.html
@@ -25,7 +25,7 @@ ol, ul, li  {  list-style-position: outside }
 		</ul>
 		<p>If you have any questions or problems, please check the documentation built into the SlimServer web interface, or view the <a href="http://www.slimdevices.com/su_faq.html">FAQ</a>, visit our user forum at <a href="http://forums.slimdevices.com">http://forums.slimdevices.com</a> or contact our tech support team at <a href="mailto:support@slimdevices.com">support@slimdevices.com</a>.</p>
 		<p>Thanks,</p>
-		<p>The Slim Devices Team</p>
+		<p>The SlimServer Team</p>
 		<hr/>
 		<p><b><a name="Installation"></a>Installation</b></p>
 		<p>To open up a browser window to SlimServer, double-click on the SlimServer icon in the Windows tool tray or choose <b>Start -> All Programs -> SlimServer -> SlimServer</b>.</p>
@@ -101,6 +101,6 @@ ol, ul, li  {  list-style-position: outside }
 		<h4>Feedback</h4>
 		<p>For questions about MoodLogic and SlimServer integration, please email: <a href="mailto:chris@moodlogic.com">chris@moodlogic.com</a></p>
 <hr>
-<p align=center>Copyright 2003-2005, Slim Devices Inc.  All Rights Reserved.</p>
+<p align=center>Copyright 2003-2005, Logitech.  All Rights Reserved.</p>
 </body>
 </html>
