--- a/osx/Getting Started.html
+++ b/osx/Getting Started.html
@@ -29,7 +29,7 @@ ol, ul, li  {  list-style-position: outside }
 		</ul>
 		<p>If you have any questions or problems, please check the documentation built into the SlimServer web interface, or view the <a href="http://www.slimdevices.com/su_faq.html">FAQ</a>, visit our user forum at <a href="http://lists.slimdevices.com/lists/listinfo/discuss">http://lists.slimdevices.com/lists/listinfo/discuss</a> or contact our tech support team at <a href="mailto:support@slimdevices.com">support@slimdevices.com</a>.</p>
 		<p>Thanks,</p>
-		<p>The Slim Devices Team</p>
+		<p>The SlimServer Team</p>
 		<hr>
 		<p><b><a name="Installation"></a>Installation</b></p>
 		<p>To install the SlimServer software, double-click the <b>Slim Installer</b> and follow the on-screen instructions.  The Installer will tell you when the installation process is complete.</p>
@@ -80,6 +80,6 @@ ol, ul, li  {  list-style-position: outside }
 		<p>Visit the iTunes Preferences and click on Advanced. If the path to your Music Library folder is incorrect, you'll need to fix it. If it is correct, try changing it to a different folder and then change it back to the correct folder. iTunes will then update the paths to all your music and export that data correctly. (This process won't move any of your music, but it will force iTunes to scan your music library and update the paths to the songs.)</p>
 		<p>If this doesn't resolve your problem, iTunes might get confused if you changed the &quot;Keep Music Folder Organized&quot; or &quot;Add Track Number&quot; settings in iTunes. Try changing these settings and then changing them back to have iTunes update the correct information about your music files.  Note that having iTunes organizing your music files may involve moving or renaming the files themselves.</p>
 
-<hr><p align=center>Copyright 2003-2005, Slim Devices Inc.  All Rights Reserved.</p>
+<hr><p align=center>Copyright 2003-2007, Logitech, Inc.  All Rights Reserved.</p>
 <hr>
 
