update version in english getting started (translation team deals with others)
Bug: 5037
git-svn-id: file:///home/awy/mirror/slim/trunk/platforms@12842 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/Getting Started.html
+++ b/win32/Getting Started.html
@@ -28,7 +28,7 @@
 <body>
 
 <h1>Getting Started with SlimServer</h1>
-<p class="p2">Version 6.5.2</p>
+<p class="p2">Version 7.0a1</p>
 
 <p class="p3">Thank you for downloading the latest version of the SlimServer for Windows. Scroll down or click on the following links to learn about each topic.</p>
 <ul>
